--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   height: 100vh;
+  font-family: "Roboto Mono", monospace;
 }
 
 .wrapper {
@@ -15,13 +16,39 @@ body {
 
 .header {
   border-bottom: 3px solid silver;
+  padding: 10px;
+}
+
+.header-title {
+  font-size: 28px;
+  font-weight: 500;
+  font-style: italic;
+  padding: 10px;
+}
+
+.btn-add-movie {
+  padding: 5px 15px;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 500;
+  background: rgba(59, 59, 211, 0.902);
+  border-radius: 5px;
+  border: 2px solid rgba(59, 59, 211, 0.902);
+  color: #fff;
+  transition: all ease-in-out 0.28s;
+}
+
+.btn-add-movie:hover {
+  cursor: pointer;
+}
+
+.block-form {
 }
 
 .table {
   max-width: 920px;
   width: 100%;
   margin: 0 auto;
-  border: 1px solid black;
   border-spacing: 0;
   border-collapse: collapse;
 }
@@ -29,6 +56,10 @@ body {
 .table td {
   width: calc(100% / 4);
   text-align: center;
+}
+
+.table_body tr {
+  background-color: rgba(192, 192, 192, 0.2);
 }
 
 .table_body tr:nth-child(odd) {
@@ -39,12 +70,13 @@ body {
   height: 50px;
   font-size: 20px;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .table_body td {
-  font-size: 25px;
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.8);
+  font-size: 22px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.7);
   padding: 10px;
 }
 
@@ -58,4 +90,49 @@ body {
 
 .show-form {
   display: block;
+}
+
+.rating-block {
+}
+
+.rating-data {
+  padding: 5px 15px;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: italic;
+  color: black;
+}
+
+.rating-up,
+.rating-down {
+  display: inline-block;
+  transition: all ease-in-out 0.28s;
+}
+
+.rating-up:hover,
+.rating-down:hover {
+  cursor: pointer;
+}
+
+.rating-down:active {
+  transform: translate(0px, 2px);
+}
+
+.rating-up:active {
+  transform: translate(0px, -2px);
+}
+
+.del-movie {
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+  transition: all ease-in-out 0.28s;
+}
+
+.table_body tr:nth-child(even) button {
+  background: silver;
+}
+
+.del-movie:hover {
+  cursor: pointer;
 }
