--- a/style.css
+++ b/style.css
@@ -43,6 +43,50 @@ body {
 }
 
 .block-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  padding: 15px;
+}
+
+.form-group label {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.form-group input {
+  padding: 7px 15px;
+  border: 1px solid silver;
+  border-radius: 5px;
+}
+
+.form-group span {
+  padding-left: 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.add-movie {
+  align-self: flex-start;
+  margin-left: 15px;
+  padding: 5px 15px;
+  border: 1px solid rgba(59, 59, 211, 0.902);
+  background: rgba(59, 59, 211, 0.902);
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 14px;
+  transition: all ease-in-out 0.28s;
+}
+
+.add-movie:hover {
+  cursor: pointer;
 }
 
 .table {
@@ -89,7 +133,7 @@ body {
 }
 
 .show-form {
-  display: block;
+  display: flex;
 }
 
 .rating-block {
